@@ -1,3 +1,7 @@
+2003-02-09 Jackson Harper <jackson@latitudegeo.com>
+
+	* Instructions.cs: Use TypeManager to lookup types
+
 2003-02-08 Jackson Harper <jackson@latitudegeo.com>
 
 	* TypeManager.cs: Fix error parsing type names
